--- a/ReviewWebsite.Api/appsettings.Development.json
+++ b/ReviewWebsite.Api/appsettings.Development.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "JwtSettings": {
+    "Secret": "", // it's hidden
+    "ExpiryMinutes": 60,
+    "Issuer": "ReviewWebsite",
+    "Audience": "ReviewWebsite-Audience"
   }
 }
