--- a/ReviewWebsite.Application/ReviewWebsite.Application.csproj
+++ b/ReviewWebsite.Application/ReviewWebsite.Application.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <PackageReference Include="ErrorOr" Version="1.2.1" />
+    <PackageReference Include="MediatR" Version="12.1.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
     <PackageReference Include="SonarAnalyzer.CSharp" Version="9.9.0.77355">
       <PrivateAssets>all</PrivateAssets>
@@ -11,6 +12,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ReviewWebsite.Domain\ReviewWebsite.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Services\Authentication\Commands\IAuthenticationCommandService.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
   </ItemGroup>
 
   <PropertyGroup>
