--- a/ReviewWebsite.Application/ReviewWebsite.Application.csproj
+++ b/ReviewWebsite.Application/ReviewWebsite.Application.csproj
@@ -2,7 +2,8 @@
 
   <ItemGroup>
     <PackageReference Include="ErrorOr" Version="1.2.1" />
-    <PackageReference Include="MediatR" Version="12.1.1" />
+    <PackageReference Include="MediatR" Version="11.1.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
     <PackageReference Include="SonarAnalyzer.CSharp" Version="9.9.0.77355">
       <PrivateAssets>all</PrivateAssets>
