create object mapping with mapster

--- a/ReviewWebsite.Api/ReviewWebsite.Api.csproj
+++ b/ReviewWebsite.Api/ReviewWebsite.Api.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Mapster" Version="7.4.0" />
+    <PackageReference Include="Mapster.DependencyInjection" Version="1.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.10" />
     <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="4.7.0" />
     <PackageReference Include="SonarAnalyzer.CSharp" Version="9.9.0.77355">
