--- a/ReviewWebsite.Infrastructure/ReviewWebsite.Infrastructure.csproj
+++ b/ReviewWebsite.Infrastructure/ReviewWebsite.Infrastructure.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.11" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.7.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="7.0.0" />
     <PackageReference Include="SonarAnalyzer.CSharp" Version="9.9.0.77355">
