--- a/ReviewWebsite.Application/ReviewWebsite.Application.csproj
+++ b/ReviewWebsite.Application/ReviewWebsite.Application.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
     <PackageReference Include="ErrorOr" Version="1.2.1" />
